@@ -1,6 +1,7 @@
 Release 0.2.3 (pending)
 ==========================
 
+- Added support for frequency correction API
 - Separate buffer count for ring buffer and usb
 - Larger buffer size - same as rtl defaults
 - Use atomics for ring buffer implementation
